y.output

state 0
	$accept: .file $end 
	file: .    (2)

	MACRO  shift 6
	.  reduce 2 (src line 84)

	file  goto 1
	macros  goto 2
	macr  goto 3
	macrid  goto 5
	macrhead  goto 4

state 1
	$accept:  file.$end 

	$end  accept
	.  error


state 2
	file:  macros.    (1)
	macros:  macros.macr 

	MACRO  shift 6
	.  reduce 1 (src line 70)

	macr  goto 7
	macrid  goto 5
	macrhead  goto 4

state 3
	macros:  macr.    (3)

	.  reduce 3 (src line 88)


state 4
	macr:  macrhead.body 

	{  shift 9
	.  error

	body  goto 8

state 5
	macrhead:  macrid.( optdparams ) 
	macrhead:  macrid.( error ) 

	(  shift 10
	.  error


state 6
	macrid:  MACRO.ID 
	macrid:  MACRO.error 

	error  shift 12
	ID  shift 11
	.  error


state 7
	macros:  macros macr.    (4)

	.  reduce 4 (src line 93)


state 8
	macr:  macrhead body.    (5)

	.  reduce 5 (src line 99)


state 9
	body:  {.optvars optstmts } 
	optvars: .    (17)

	TYPEID  shift 16
	.  reduce 17 (src line 178)

	optvars  goto 13
	vars  goto 14
	var  goto 15

state 10
	macrhead:  macrid (.optdparams ) 
	macrhead:  macrid (.error ) 
	optdparams: .    (11)

	error  shift 18
	TYPEID  shift 21
	)  reduce 11 (src line 138)
	.  error

	optdparams  goto 17
	dparams  goto 19
	dparam  goto 20

state 11
	macrid:  MACRO ID.    (8)

	.  reduce 8 (src line 121)


state 12
	macrid:  MACRO error.    (9)

	.  reduce 9 (src line 129)


state 13
	body:  { optvars.optstmts } 
	optstmts: .    (23)

	error  shift 28
	ID  shift 30
	LOOP  shift 29
	}  reduce 23 (src line 210)
	.  error

	optstmts  goto 22
	stmts  goto 23
	stmt  goto 24
	assigmentstmt  goto 27
	callstmt  goto 26
	tokenloop  goto 25

state 14
	optvars:  vars.    (16)
	vars:  vars.var 

	TYPEID  shift 16
	.  reduce 16 (src line 176)

	var  goto 31

state 15
	vars:  var.    (18)

	.  reduce 18 (src line 182)


state 16
	var:  TYPEID.ID ; 
	var:  TYPEID.error ; 

	error  shift 33
	ID  shift 32
	.  error


state 17
	macrhead:  macrid ( optdparams.) 

	)  shift 34
	.  error


state 18
	macrhead:  macrid ( error.) 

	)  shift 35
	.  error


state 19
	optdparams:  dparams.    (10)
	dparams:  dparams., dparam 

	,  shift 36
	.  reduce 10 (src line 136)


state 20
	dparams:  dparam.    (12)

	.  reduce 12 (src line 142)


state 21
	dparam:  TYPEID.ID 

	ID  shift 37
	.  error


state 22
	body:  { optvars optstmts.} 

	}  shift 38
	.  error


state 23
	optstmts:  stmts.    (22)
	stmts:  stmts.stmt 

	error  shift 28
	ID  shift 30
	LOOP  shift 29
	}  reduce 22 (src line 208)
	.  error

	stmt  goto 39
	assigmentstmt  goto 27
	callstmt  goto 26
	tokenloop  goto 25

state 24
	stmts:  stmt.    (24)

	.  reduce 24 (src line 214)


state 25
	stmt:  tokenloop.condicionloop body 

	ID  shift 41
	.  error

	condicionloop  goto 40

state 26
	stmt:  callstmt.; 

	;  shift 42
	.  error


state 27
	stmt:  assigmentstmt.; 

	;  shift 43
	.  error


state 28
	stmt:  error.; 

	;  shift 44
	.  error


state 29
	tokenloop:  LOOP.    (30)

	.  reduce 30 (src line 252)


state 30
	assigmentstmt:  ID.= expr 
	callstmt:  ID.( optparams ) 

	(  shift 46
	=  shift 45
	.  error


state 31
	vars:  vars var.    (19)

	.  reduce 19 (src line 187)


state 32
	var:  TYPEID ID.; 

	;  shift 47
	.  error


state 33
	var:  TYPEID error.; 

	;  shift 48
	.  error


state 34
	macrhead:  macrid ( optdparams ).    (6)

	.  reduce 6 (src line 107)


state 35
	macrhead:  macrid ( error ).    (7)

	.  reduce 7 (src line 115)


state 36
	dparams:  dparams ,.dparam 

	TYPEID  shift 21
	.  error

	dparam  goto 49

state 37
	dparam:  TYPEID ID.    (14)

	.  reduce 14 (src line 153)


state 38
	body:  { optvars optstmts }.    (15)

	.  reduce 15 (src line 168)


state 39
	stmts:  stmts stmt.    (25)

	.  reduce 25 (src line 219)


state 40
	stmt:  tokenloop condicionloop.body 

	{  shift 9
	.  error

	body  goto 50

state 41
	condicionloop:  ID.: expr , expr 

	:  shift 51
	.  error


state 42
	stmt:  callstmt ;.    (27)

	.  reduce 27 (src line 234)


state 43
	stmt:  assigmentstmt ;.    (28)

	.  reduce 28 (src line 240)


state 44
	stmt:  error ;.    (29)

	.  reduce 29 (src line 246)


state 45
	assigmentstmt:  ID =.expr 

	ID  shift 56
	FLOAT  shift 58
	INT  shift 59
	+  shift 55
	-  shift 54
	.  error

	expr  goto 52
	primary  goto 53
	num  goto 57

state 46
	callstmt:  ID (.optparams ) 
	optparams: .    (35)

	ID  shift 56
	FLOAT  shift 58
	INT  shift 59
	+  shift 55
	-  shift 54
	.  reduce 35 (src line 308)

	expr  goto 63
	primary  goto 53
	num  goto 57
	param  goto 62
	optparams  goto 60
	params  goto 61

state 47
	var:  TYPEID ID ;.    (20)

	.  reduce 20 (src line 193)


state 48
	var:  TYPEID error ;.    (21)

	.  reduce 21 (src line 201)


state 49
	dparams:  dparams , dparam.    (13)

	.  reduce 13 (src line 147)


state 50
	stmt:  tokenloop condicionloop body.    (26)

	.  reduce 26 (src line 225)


state 51
	condicionloop:  ID :.expr , expr 

	ID  shift 56
	FLOAT  shift 58
	INT  shift 59
	+  shift 55
	-  shift 54
	.  error

	expr  goto 64
	primary  goto 53
	num  goto 57

state 52
	assigmentstmt:  ID = expr.    (32)
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 

	+  shift 65
	-  shift 66
	*  shift 67
	/  shift 68
	.  reduce 32 (src line 281)


state 53
	expr:  primary.    (39)

	.  reduce 39 (src line 327)


state 54
	primary:  -.primary 

	ID  shift 56
	FLOAT  shift 58
	INT  shift 59
	+  shift 55
	-  shift 54
	.  error

	primary  goto 69
	num  goto 57

state 55
	primary:  +.primary 

	ID  shift 56
	FLOAT  shift 58
	INT  shift 59
	+  shift 55
	-  shift 54
	.  error

	primary  goto 70
	num  goto 57

state 56
	primary:  ID.    (46)

	.  reduce 46 (src line 357)


state 57
	primary:  num.    (47)

	.  reduce 47 (src line 359)


state 58
	num:  FLOAT.    (48)

	.  reduce 48 (src line 362)


state 59
	num:  INT.    (49)

	.  reduce 49 (src line 365)


state 60
	callstmt:  ID ( optparams.) 

	)  shift 71
	.  error


state 61
	optparams:  params.    (34)
	params:  params., param 

	,  shift 72
	.  reduce 34 (src line 306)


state 62
	params:  param.    (36)

	.  reduce 36 (src line 312)


state 63
	param:  expr.    (38)
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 

	+  shift 65
	-  shift 66
	*  shift 67
	/  shift 68
	.  reduce 38 (src line 323)


state 64
	condicionloop:  ID : expr., expr 
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 

	,  shift 73
	+  shift 65
	-  shift 66
	*  shift 67
	/  shift 68
	.  error


state 65
	expr:  expr +.expr 

	ID  shift 56
	FLOAT  shift 58
	INT  shift 59
	+  shift 55
	-  shift 54
	.  error

	expr  goto 74
	primary  goto 53
	num  goto 57

state 66
	expr:  expr -.expr 

	ID  shift 56
	FLOAT  shift 58
	INT  shift 59
	+  shift 55
	-  shift 54
	.  error

	expr  goto 75
	primary  goto 53
	num  goto 57

state 67
	expr:  expr *.expr 

	ID  shift 56
	FLOAT  shift 58
	INT  shift 59
	+  shift 55
	-  shift 54
	.  error

	expr  goto 76
	primary  goto 53
	num  goto 57

state 68
	expr:  expr /.expr 

	ID  shift 56
	FLOAT  shift 58
	INT  shift 59
	+  shift 55
	-  shift 54
	.  error

	expr  goto 77
	primary  goto 53
	num  goto 57

state 69
	primary:  - primary.    (44)

	.  reduce 44 (src line 352)


state 70
	primary:  + primary.    (45)

	.  reduce 45 (src line 355)


state 71
	callstmt:  ID ( optparams ).    (33)

	.  reduce 33 (src line 294)


state 72
	params:  params ,.param 

	ID  shift 56
	FLOAT  shift 58
	INT  shift 59
	+  shift 55
	-  shift 54
	.  error

	expr  goto 63
	primary  goto 53
	num  goto 57
	param  goto 78

state 73
	condicionloop:  ID : expr ,.expr 

	ID  shift 56
	FLOAT  shift 58
	INT  shift 59
	+  shift 55
	-  shift 54
	.  error

	expr  goto 79
	primary  goto 53
	num  goto 57

state 74
	expr:  expr.+ expr 
	expr:  expr + expr.    (40)
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 

	*  shift 67
	/  shift 68
	.  reduce 40 (src line 329)


state 75
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr - expr.    (41)
	expr:  expr.* expr 
	expr:  expr./ expr 

	*  shift 67
	/  shift 68
	.  reduce 41 (src line 331)


state 76
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr * expr.    (42)
	expr:  expr./ expr 

	.  reduce 42 (src line 333)


state 77
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr / expr.    (43)

	.  reduce 43 (src line 335)


state 78
	params:  params , param.    (37)

	.  reduce 37 (src line 317)


state 79
	condicionloop:  ID : expr , expr.    (31)
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 

	+  shift 65
	-  shift 66
	*  shift 67
	/  shift 68
	.  reduce 31 (src line 259)


21 terminals, 26 nonterminals
50 grammar rules, 80/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
75 working sets used
memory: parser 63/30000
21 extra closures
112 shift entries, 4 exceptions
40 goto entries
24 entries saved by goto default
Optimizer space used: output 86/30000
86 table entries, 0 zero
maximum spread: 21, maximum offset: 73
